--- a/css/feedback.css
+++ b/css/feedback.css
@@ -17,3 +17,16 @@
     overflow-x: hidden;
     overflow-y: visible;
 }
+.feddBtn{
+  color: gray;
+  font-weight: bold;
+  padding: 0.3em;
+}
+
+.feedBtn, .feddbackBox, .feed{
+      box-shadow: 0px 0px 10px white;
+      border: none;
+}
+.feed{
+  color: gray;
+}
