Styled the footer section
I think not using em to set font size is proving to be a big mistake

--- a/css/master.css
+++ b/css/master.css
@@ -13,42 +13,9 @@ html, body {
 #container{
   height: 452%;
   width: 100%;
-
-
+  margin: 0px;
 }
 
-
-#menu ul{
-    list-style: none;
-}
-
-#menu a  {
-  text-decoration: none;
-  color: white;
-}
-
-.tab {
-  float: right;
-  width: 12%;
-  padding: 0px;
-  text-align: center;
-  cursor: pointer;
-  font-size: 0.8em;
-  line-height: 42px;
-  border-bottom: 4px solid transparent;
-  border-top: 4px solid transparent;
-}
-.tab:hover {
-  background: rgba(153, 153, 255, 0.8) ;
-  color: black;
-}
-#container #menu{
-  background-color: rgba(0,0,0,0.5);
-  position: fixed;
-  height: 50px;
-  width: 100%;
-  z-index: 1;
-}
 
 
 #container #home{
@@ -376,76 +343,6 @@ figure{
 
 }
 
-#footer {
-
-
-  background-color: #5c8a8a;
-}
-#fm{
-  letter-spacing: 2px;
-
-  padding: 10px;
-  margin-left: 5px;;
-  float: left;
-
-}
-#footer a{
-  text-decoration: none;
-  color: #e0ebeb;
-
-}
-#footer h4{
-  color:#e0ebeb;
-}
-#fe{
- float: left;
-  letter-spacing: 2px;
-  padding-left: 10px;
-
-
-  padding-top: 10px;
-  padding-bottom: 15px;
-}
-#fc{
-width: 100%;
-text-align: center;
-
-
-  margin-top: 1%;
-  padding-bottom: 5px;
-  color: #e0ebeb;
-  letter-spacing: 1px;
-  font-size: 12px;
-
-
-}
-.tab{
-
-}
-.tabon{
-  background: rgba(204, 102, 255,0.8) ;
-  border-bottom: 4px solid #ffff4d;
-  color: black;
-}
-#footermain{
-  height: 120px;
-}
-.social{
-  position: relative;
-    letter-spacing: 10px;
-  font-size: 18px;
-
-}
-.hover:hover{
-  color:#3B5998;
-}
-.tr{
-  width: 33%;}
-/* About us content*/
-#aboutbody{
-  height: calc(100% - 50px);
-  position: relative;
-}
 #i{
 	background:url('t.JPG');
 	width:100%;
