--- a/css/footer.css
+++ b/css/footer.css
@@ -1,5 +1,5 @@
 #footer{
-  background: gray;
+  background: lightgray;
   width: 100%;
   overflow-y: visible;
 }
@@ -9,6 +9,10 @@
     float: left;
 }
 #social-icon-bar{
+  font-size: 1.5em;
+  letter-spacing: 7px;
+  padding: 75px 45px 0 0;
+  text-align: right;
   float: left;
   width: 40%;
   text-shadow: 0px 0px 10px white;
@@ -18,7 +22,7 @@
     font-weight: bold;
     text-align: center;
     transition: all 0.3s ease;
-    color: black;
+    color: #373737;
     font-size: 0.75em !important;
     text-shadow: 0px 0px 2px white;
 }
@@ -35,9 +39,10 @@
 #footer p{
   clear: both;
   text-align: center;
+  padding: 7px;
   width: 100%;
   font-size: 0.6em;
-  color: white;
+  color: #555;;
   text-shadow: 0px 0px 5px white;
 }
 .social-icons td{
